15-s3-gateway-endpoint-connection/security-groups.tf
# this file has two security groups, one with an ingress ssh rule and the other
# with a egress ssh rule

resource "aws_security_group" "security_group_for_ec2_instance" {
  name   = "security_group_for_ec2_instance"
  vpc_id = aws_vpc.example_vpc.id
  tags   = { Name = "security_group_for_ec2_instance" }
}

resource "aws_vpc_security_group_ingress_rule" "ingress_ssh_rule" {
  security_group_id = aws_security_group.security_group_for_ec2_instance.id
  
  # where is the traffic coming from
  referenced_security_group_id = aws_security_group.security_group_for_ec2_instance_endpoint.id

  from_port = 22
  to_port   = 22

  ip_protocol = "tcp"
}

# egress rule to access S3 using the gateway endpoint
resource "aws_vpc_security_group_egress_rule" "allow_https_to_s3" {
  security_group_id = aws_security_group.security_group_for_ec2_instance.id
  description       = "Allow outbound HTTPS traffic to S3 Gateway Endpoint"

  # Target the automatically managed AWS S3 IP ranges
  prefix_list_id    = aws_vpc_endpoint.s3_gateway.prefix_list_id
  
  # Configure protocol and port for HTTPS
  ip_protocol       = "tcp"
  from_port         = 443
  to_port           = 443

  tags = {
    Name = "egress-s3-https"
  }
}




resource "aws_security_group" "security_group_for_ec2_instance_endpoint" {
  name   = "security_group_for_ec2_instance_endpoint"
  vpc_id = aws_vpc.example_vpc.id
  tags   = { Name = "security_group_for_ec2_instance_endpoint" }
}

resource "aws_vpc_security_group_egress_rule" "egress_ssh_rule" {
  security_group_id = aws_security_group.security_group_for_ec2_instance_endpoint.id

  # where is the traffic going
  # cidr_ipv4 = aws_subnet.private_subnet_for_ec2_instance.cidr_block
  # cidr_ipv4 = "0.0.0.0/0"

  # Target destination
  referenced_security_group_id = aws_security_group.security_group_for_ec2_instance.id

  from_port = 22
  to_port   = 22

  ip_protocol = "tcp"
}
